GNOME Bugzilla – Bug 624432
GtkRadioMenuItem is broken
Last modified: 2010-07-19 14:17:25 UTC
Creating a GtkRadioMenuItem creates a signal infinite loop; part of the stacktrace from gtk-demo ("Menus"): 0x00007ffff5ee51b8 in type_check_is_value_type_U (type=Cannot access memory at address 0x7fffff7fefd8 ) at gtype.c:4067 4067 { (gdb) bt
+ Trace 222853
git bisect points 94fd7a350288b73aeffec44fb3b18ca8a061e045 as being the culprit.
Created attachment 165970 [details] [review] Add _gtk_check_menu_item_set_active() internal function gtk_check_menu_item_set_active() doesn't only touch the priv->active var in GtkCheckMenuItem (As gtk_check_menu_item_get_active() does).
Comment on attachment 165970 [details] [review] Add _gtk_check_menu_item_set_active() internal function committed a modified patch documenting the private function commit 9ee3d73a19f71492b6cba77b1e9fa42e3461fdd3
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.