Add _gtk_check_menu_item_set_active() internal function

It's needed by gtkradiomenuitem

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=624432